<resources>
    <string name="app_name">Sudoku</string>

    <string name="back">Back</string>
    <string name="settings">Settings</string>


    <string name="undo">Undo</string>
    <string name="erase">Erase</string>
    <string name="notes">Notes</string>
    <string name="hint">Hint</string>

    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>

</resources>