<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/blue"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/settings"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/settings"
                android:src="@drawable/ic_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <View style="@style/viewHorizontal" />

        <TableRow>

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_1_1"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_1_2"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_1_3"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_1_4"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_1_5"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_1_6"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_1_7"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_1_8"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_1_9"
                style="@style/cell" />

            <View style="@style/viewVertical" />
        </TableRow>

        <View style="@style/viewHorizontalTransparent" />

        <TableRow>

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_2_1"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_2_2"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_2_3"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_2_4"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_2_5"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_2_6"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_2_7"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_2_8"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_2_9"
                style="@style/cell" />

            <View style="@style/viewVertical" />
        </TableRow>

        <View style="@style/viewHorizontalTransparent" />

        <TableRow>

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_3_1"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_3_2"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_3_3"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_3_4"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_3_5"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_3_6"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_3_7"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_3_8"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_3_9"
                style="@style/cell" />

            <View style="@style/viewVertical" />
        </TableRow>

        <View style="@style/viewHorizontal" />

        <TableRow>

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_4_1"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_4_2"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_4_3"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_4_4"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_4_5"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_4_6"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_4_7"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_4_8"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_4_9"
                style="@style/cell" />

            <View style="@style/viewVertical" />
        </TableRow>

        <View style="@style/viewHorizontalTransparent" />

        <TableRow>

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_5_1"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_5_2"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_5_3"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_5_4"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_5_5"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_5_6"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_5_7"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_5_8"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_5_9"
                style="@style/cell" />

            <View style="@style/viewVertical" />
        </TableRow>

        <View style="@style/viewHorizontalTransparent" />

        <TableRow>

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_6_1"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_6_2"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_6_3"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_6_4"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_6_5"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_6_6"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_6_7"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_6_8"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_6_9"
                style="@style/cell" />

            <View style="@style/viewVertical" />
        </TableRow>

        <View style="@style/viewHorizontal" />

        <TableRow>

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_7_1"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_7_2"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_7_3"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_7_4"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_7_5"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_7_6"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_7_7"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_7_8"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_7_9"
                style="@style/cell" />

            <View style="@style/viewVertical" />
        </TableRow>

        <View style="@style/viewHorizontalTransparent" />

        <TableRow>

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_8_1"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_8_2"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_8_3"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_8_4"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_8_5"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_8_6"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_8_7"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_8_8"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_8_9"
                style="@style/cell" />

            <View style="@style/viewVertical" />
        </TableRow>

        <View style="@style/viewHorizontalTransparent" />

        <TableRow>

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_9_1"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_9_2"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_9_3"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_9_4"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_9_5"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_9_6"
                style="@style/cell" />

            <View style="@style/viewVertical" />

            <TextView
                android:id="@+id/cell_9_7"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_9_8"
                style="@style/cell" />

            <View style="@style/viewVerticalTransparent" />

            <TextView
                android:id="@+id/cell_9_9"
                style="@style/cell" />

            <View style="@style/viewVertical" />
        </TableRow>

        <View style="@style/viewHorizontal" />
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/undo"
            style="@style/actionButtons"
            android:drawableTop="@drawable/ic_undo"
            android:text="@string/undo" />

        <Button
            android:id="@+id/erase"
            style="@style/actionButtons"
            android:drawableTop="@drawable/ic_erase"
            android:text="@string/erase" />

        <Button
            android:id="@+id/notes"
            style="@style/actionButtons"
            android:drawableTop="@drawable/ic_notes"
            android:text="@string/notes" />

        <Button
            android:id="@+id/hint"
            style="@style/actionButtons"
            android:drawableTop="@drawable/ic_hint"
            android:text="@string/hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one"
            style="@style/number"
            android:text="@string/one" />

        <Button
            android:id="@+id/two"
            style="@style/number"
            android:text="@string/two" />

        <Button
            android:id="@+id/three"
            style="@style/number"
            android:text="@string/three" />

        <Button
            android:id="@+id/four"
            style="@style/number"
            android:text="@string/four" />

        <Button
            android:id="@+id/five"
            style="@style/number"
            android:text="@string/five" />

        <Button
            android:id="@+id/six"
            style="@style/number"
            android:text="@string/six" />

        <Button
            android:id="@+id/seven"
            style="@style/number"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eight"
            style="@style/number"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nine"
            style="@style/number"
            android:text="@string/nine" />

    </LinearLayout>

</LinearLayout>
